ZGC: Fix ZNMethodTable corruption

XMLWordPrintable

    • gc
    • b30
    • Verified

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007fa5d53310f0, pid=29782, tid=29791
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0) (build 12-internal+0-jdk12-jdk.1215)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (12-internal+0-jdk12-jdk.1215, mixed mode, tiered, z gc, linux-amd64)
        # Problematic frame:
        # C 0x00007fa5d53310f0
        #

        --------------- S U M M A R Y ------------

        Command Line: -XX:MaxRAMPercentage=6 -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+CreateCoredumpOnCrash -XX:-UseCompressedOops --add-opens=java.base/java.net=ALL-UNNAMED -Dseed=6843712566914346 -XX:MaxRAMPercentage=50 applications.runthese.Runner -duration 30 -runlist RunTheseTestList.dat

        Host: Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 8 cores, 59G, Oracle Linux Server release 7.1
        Time: Tue Jan 15 09:24:58 2019 PST elapsed time: 1083 seconds (0d 0h 18m 3s)

        --------------- T H R E A D ---------------

        Current thread (0x00007fa5e8044920): GCTaskThread "ZWorker#4" [stack: 0x00007fa5ec2d7000,0x00007fa5ec3d7000] [id=29791]

        Stack: [0x00007fa5ec2d7000,0x00007fa5ec3d7000], sp=0x00007fa5ec3d5d98, free space=1019k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        C 0x00007fa5d53310f0
        V [libjvm.so+0xeadcbc] ZTask::GangTask::work(unsigned int)+0x1c
        V [libjvm.so+0xe6998d] GangWorker::loop()+0x4d
        V [libjvm.so+0xdcc65f] Thread::call_run()+0x16f
        V [libjvm.so+0xbfa24e] thread_native_entry(Thread*)+0xee


        siginfo: si_signo: 11 (SIGSEGV), si_code: 2 (SEGV_ACCERR), si_addr: 0x00007fa5ee77b748

        Register to memory mapping:

        RAX=0x00007fa5d53310f0 points into unknown readable memory: 81 4a 18 01 00 00 00 eb
        RBX=0x0000000000008c80 is an unknown value
        RCX=0x00007fa5e8044ca0 points into unknown readable memory: b8 7d 57 ef a5 7f 00 00
        RDX=0x00007fa5ee77b730: <offset 0x0000000000614730> in <sysroot>/jdk-12/lib/server/libjvm.so at 0x00007fa5ee167000
        RSP=0x00007fa5ec3d5d98 points into unknown readable memory: c5 e8 ff ee a5 7f 00 00
        RBP=0x00007fa5ec3d5e00 points into unknown readable memory: 20 5e 3d ec a5 7f 00 00
        RSI=0x0 is NULL
        RDI=0x00007fa5d532b990 points into unknown readable memory: 00 06 33 d5 a5 7f 00 00
        R8 =0x0 is NULL
        R9 =0x00007fa5d29ad58a is at entry_point+-118 in (nmethod*)0x00007fa5d29ad410
        R10=0x0 is NULL
        R11=0x00000000ffffffff is an unknown value
        R12=0x00007fa5d532b990 points into unknown readable memory: 00 06 33 d5 a5 7f 00 00
        R13=0x00000000000463b8 is an unknown value
        R14=0x0000000000008c77 is an unknown value
        R15=0x00007fa5d532b991 points into unknown readable memory: 06 33 d5 a5 7f 00 00


        Registers:
        RAX=0x00007fa5d53310f0, RBX=0x0000000000008c80, RCX=0x00007fa5e8044ca0, RDX=0x00007fa5ee77b730
        RSP=0x00007fa5ec3d5d98, RBP=0x00007fa5ec3d5e00, RSI=0x0000000000000000, RDI=0x00007fa5d532b990
        R8 =0x0000000000000000, R9 =0x00007fa5d29ad58a, R10=0x0000000000000000, R11=0x00000000ffffffff
        R12=0x00007fa5d532b990, R13=0x00000000000463b8, R14=0x0000000000008c77, R15=0x00007fa5d532b991
        RIP=0x00007fa5d53310f0, EFLAGS=0x0000000000010287, CSGSFS=0x0000000000000033, ERR=0x0000000000000007
          TRAPNO=0x000000000000000e

        Top of Stack: (sp=0x00007fa5ec3d5d98)
        0x00007fa5ec3d5d98: 00007fa5eeffe8c5 00007fa5ec3d5e00
        0x00007fa5ec3d5da8: 00007fa5d29ad9d0 00007fa37cc88460
        0x00007fa5ec3d5db8: 00007fa5d29ad9c8 0000000000000001
        0x00007fa5ec3d5dc8: 00007fa5ec1d3c20 0000000000000001

        Instructions: (pc=0x00007fa5d53310f0)
        0x00007fa5d53310d0: fc ff ff ff 74 11 48 f7 c6 02 00 00 00 75 08 48
        0x00007fa5d53310e0: 81 4a 08 02 00 00 00 49 8b f3 48 85 f6 75 0a 48
        0x00007fa5d53310f0: 81 4a 18 01 00 00 00 eb 22 48 8b 76 08 48 33 72
        0x00007fa5d5331100: 18 48 f7 c6 fc ff ff ff 74 11 48 f7 c6 02 00 00

        Stack slot to memory mapping:
        stack at sp + 0 slots: 0x00007fa5eeffe8c5: <offset 0x0000000000e978c5> in <sysroot>/jdk-12/lib/server/libjvm.so at 0x00007fa5ee167000
        stack at sp + 1 slots: 0x00007fa5ec3d5e00 points into unknown readable memory: 20 5e 3d ec a5 7f 00 00
        stack at sp + 2 slots: 0x00007fa5d29ad9d0 is at entry_point+976 in (nmethod*)0x00007fa5d29ad410
        stack at sp + 3 slots: 0x00007fa37cc88460 points into unknown readable memory: 00 00 00 00 00 00 00 00
        stack at sp + 4 slots: 0x00007fa5d29ad9c8 is at entry_point+968 in (nmethod*)0x00007fa5d29ad410
        stack at sp + 5 slots: 0x0000000000000001 is an unknown value
        stack at sp + 6 slots: 0x00007fa5ec1d3c20 points into unknown readable memory: a0 a0 4d ef a5 7f 00 00
        stack at sp + 7 slots: 0x0000000000000001 is an unknown value

              Assignee:
              Per Liden (Inactive)
              Reporter:
              Per Liden (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: