8217309: ZGC: Fix ZNMethodTable corruption

Reviewed-by: eosterlund, stefank